--- a/_data/social-accounts.yaml
+++ b/_data/social-accounts.yaml
@@ -1,4 +1,5 @@
 
-facebook: https://www.facebook.com/facebookcanada/
-instagram: https://www.instagram.com/instagram/
-email: eisen.dan@gmail.com
+facebook: https://www.facebook.com/dustinchilds
+instagram: https://www.instagram.com/dustinchilds/
+email: dustinchilds@gmail.com
+
