--- a/_config.yml
+++ b/_config.yml
@@ -27,21 +27,21 @@ baseurl: /Dustin-Childs
 permalink: /:categories/:title/
 country: CA
 lang: en
-title: A great artist or company with a fast website.
-description: Everyone is unique and so is this description
-company_name: Jane's Flying Circus
-company_nickname: Fancy Fliers of Canada
+title: Dustin Childs
+description: Dustin is an experienced Canadian musician. You can see him live and when hosting regular open mic events around Victoria, BC.
+# company_name: n/a
+# company_nickname: n/a
 nav: navs/nav-default.html
 sidebar: yes
 logo: /assets/logo.png
 social_image: assets/share_site.jpg
 email: your-email@example.com
 tel_pretty: (250) 111-2222
-tel: 2501112222
-author: Daniel Eisen
-twitter: true
-twitter_username: twitterMan
-github_username: danyn
+# tel: n/a
+author: Daniel Eisen - github name danyn
+twitter: false
+# twitter_username: n/a
+# github_username: n/a
 
 
 
@@ -56,23 +56,23 @@ header_pages:
 # amps_components:
 amp-sidebar: yes
 amp-accordion: yes
-amp-soundcloud: yes
+# amp-soundcloud: yes
  
 
 
 # Information for facebook pixil and marketing functions
 facebook:
-  admins: 3333
-  app_id: 1111
-  publisher: 2222
-  locale: en_CA 
+  # admins: n/a
+  # app_id: n/a
+  # publisher: n/a
+  # locale: en_CA 
 # Information for website verification codes often written into the the document head
 webmaster_verifications:
-  google: 938475394875
-  bing: ""
-  alexa: ""
-  yandex: ""
-  baidu: ""
+  # google: 938475394875
+  # bing: n/a
+  # alexa: n/a
+  # yandex: n/a
+  # baidu: n/a
 
 
 
@@ -81,8 +81,8 @@ schema_org:
   type: MedicalBusiness
   city: Victoria
   province: BC
-  postalCode: V8R 1J5
-  streetAddress: 1780 Fort Street Victoria
+  # postalCode: n/a
+  # streetAddress: n/a
 
 
 # Build settings
