--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@
 # repository: 131331861
 repository_url: https://github.com/danyn/Dustin-Childs
 url: https://danyn.github.io
-baseurl: /Dustin-Childs
+# baseurl: /Dustin-Childs
 permalink: /:categories/:title/
 country: CA
 lang: en
